--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "clientId": "1153092101660225658",
-  "guildId": "1151064685672677387",
-  "token": "MTE1MzA5MjEwMTY2MDIyNTY1OA.GmwU1y.WNsp8b2GyhIivVwHMFadvMH_0_6h_Mp16Wjq1k"
+  "clientId": "",
+  "guildId": "",
+  "token": ""
 }
